@@ -150,7 +150,7 @@ encodings if asked for::
   >>> etree.tostring(root)
   '<test> &#63697; + &#63698; </test>'
 
-  >>> etree.tostring(root, 'UTF-8')
+  >>> etree.tostring(root, 'UTF-8', xml_declaration=False)
   '<test> \xef\xa3\x91 + \xef\xa3\x92 </test>'
 
 As an extension, lxml.etree has a new ``lxml.etree.tounicode()`` function that
